Fix draw card dialog too big on desktop

--- a/src/footer/draw-card-dialog.css
+++ b/src/footer/draw-card-dialog.css
@@ -8,7 +8,6 @@
   position: relative;
   text-align: center;
   margin: 0;
-  overflow: visible;
 }
 .draw-card-dialog .dialog-label {
   margin: 40px 0;
@@ -82,21 +81,18 @@
 .card-area .card {
   display: block;
   margin: 0 auto;
+  width: 100%;
   background: white;
-  width: 140px;
   text-align: center;
   border-radius: 4px;
 }
 .card-area .current-card {
   position: absolute;
+  left: 0;
+  top: 0;
   background: none;
-  width: 53vw;
   transform-origin: center center;
-  height: 100%;
-}
-.card-area .default-card {
-  height: calc((52vw * 1.54) - 10px);
-  width: calc(52vw - 10px);
+  width: 100%;
 }
 .card-area .draw-card-btn {
   position: relative;
@@ -104,10 +100,10 @@
   color: #4e8fc2;
 }
 .card-area .card .card-img {
-  width: 53vw;
+  width: 100%;
   height: auto;
   position: relative;
-  top: -20px;
+  top: -15px;
 }
 /* TODO
 animation on click on COMMENCER
@@ -125,8 +121,7 @@ transform: translate(-100%, -100%) scale(0.25);
 }
 
 .card-area .remaining-cards-number {
-  z-index: 1;
-  position: relative;
+  position: absolute;
   top: -11px;
   left: -11px;
   color: white;
@@ -148,7 +143,6 @@ transform: translate(-100%, -100%) scale(0.25);
 .flip-card-inner {
   position: relative;
   width: 100%;
-  height: 100%;
   text-align: center;
   margin: 0;
   transform-style: preserve-3d;
